--- a/templates/teamPage.html
+++ b/templates/teamPage.html
@@ -1,13 +1,22 @@
 <html>
+<title>
+Fantasy Football
+</title>
 <body>
-
-The top 5 performers on the {{team}} are:
+<h1>
+The Top 5 Performers on the {{team}} Are:
+</h1>
 <br>
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+<link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
+
 {% for x in range(5) %}
 <br>
 {{x+1}}) Name: {{data[x]["Name"]}} Points: {{data[x]["PlayerSeason"]["FantasyPoints"]}}
 <br>
 {% endfor %}
-
+<br>
+<form method="GET" class="pure-form" action="/">
+<input type="submit" class="pure-button pure-button-primary" value="Back">
 </body>
 </html>
